@@ -5,6 +5,11 @@ Note: This file contains a list changes in the 'v2' branch.
 The master branch will rely on the Git repository history.
 
 
+2020-10-29
+
+ - Fixed #570: Added a stub for restoring get_commodity_map() API.
+
+
 2020-10-26
 
  - Fixed Github Actions workflows and Wheel generation.
